deleted use of get_sunrise_sunset from notebooks

--- a/tests/fixtures/longitude_calculation/longitude_calculation_test_data_creator.ipynb
+++ b/tests/fixtures/longitude_calculation/longitude_calculation_test_data_creator.ipynb
@@ -34,9 +34,7 @@
     "from solardatatools import DataHandler\n",
     "from solardatatools.dataio import get_pvdaq_data\n",
     "path = Path.cwd().parent.parent.parent\n",
-    "os.chdir(path)\n",
-    "# from pvsystemprofiler.estimator import ConfigurationEstimator\n",
-    "# from pvsystemprofiler.longitude_study import LongitudeStudy"
+    "os.chdir(path)"
    ]
   },
   {
@@ -59,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 42.4 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 48.7 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -111,17 +109,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 16.49 seconds\n",
+      "total time: 16.59 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              5.69s\n",
-      "Cleaning                   0.32s\n",
-      "Filtering/Summarizing      10.48s\n",
-      "    Data quality           0.44s\n",
-      "    Clear day detect       0.30s\n",
-      "    Clipping detect        8.33s\n",
-      "    Capacity change detect 1.41s\n",
+      "Preprocessing              5.58s\n",
+      "Cleaning                   0.31s\n",
+      "Filtering/Summarizing      10.70s\n",
+      "    Data quality           0.45s\n",
+      "    Clear day detect       0.33s\n",
+      "    Clipping detect        8.48s\n",
+      "    Capacity change detect 1.43s\n",
       "\n"
      ]
     }
@@ -145,21 +143,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pvsystemprofiler.algorithms.optimized_sunrise_sunset import get_optimized_sunrise_sunset"
+    "from solardatatools.algorithms import SunriseSunset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "25e4b3ec",
+   "id": "written-drove",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fdm = dh.filled_data_matrix\n",
-    "rdm = None\n",
-    "day_of_year = dh.day_index.dayofyear.to_numpy()\n",
-    "days = dh.daily_flags.no_errors\n",
-    "opt_dict = get_optimized_sunrise_sunset(fdm, rdm)"
+    "ss = SunriseSunset()\n",
+    "ss.run_optimizer(data=dh.filled_data_matrix)"
    ]
   },
   {
@@ -169,8 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sunrise = opt_dict['meas_sr_f']\n",
-    "sunset = opt_dict['meas_ss_f']\n",
+    "sunrise = ss.sunrise_measurements\n",
+    "sunset = ss.sunset_measurements\n",
     "sunrise[np.isnan(sunrise)] = 0\n",
     "sunset[np.isnan(sunset)] = 0\n",
     "solarnoon = np.nanmean([sunrise, sunset], axis=0)"
@@ -210,6 +205,17 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "minor-gabriel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_of_year = dh.day_index.dayofyear.to_numpy()\n",
+    "days = dh.daily_flags.no_errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "910e031c",
    "metadata": {},
    "outputs": [],
@@ -220,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1d3cb149",
    "metadata": {},
    "outputs": [],
@@ -233,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9a563f22",
    "metadata": {},
    "outputs": [],
@@ -253,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1edd7410",
    "metadata": {},
    "outputs": [],
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "01faad28",
    "metadata": {},
    "outputs": [
@@ -277,7 +283,7 @@
        "-77.10636729272031"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,164 +293,6 @@
     "\n",
     "calculate_longitude(eot_duffie, solarnoon, days, gmt_offset)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "employed-elizabeth",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " solarnoon = np.genfromtxt('./tests/fixtures/longitude_calculation/solarnoon.csv'\n",
-    "                           , delimiter=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "educated-delay",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eot_duffie= np.genfromtxt('./tests/fixtures/longitude_calculation/eot_duffie_output.csv', delimiter=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "removed-chorus",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " days = np.genfromtxt('./tests/fixtures/longitude_calculation/days.csv', delimiter=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "adjusted-verse",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "arrays used as indices must be of integer (or boolean) type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-f918b921cdba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcalculate_longitude\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meot_duffie\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolarnoon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgmt_offset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/github/pv-system-profiler/pvsystemprofiler/algorithms/longitude/calculation.py\u001b[0m in \u001b[0;36mcalculate_longitude\u001b[0;34m(eot, solarnoon, days, gmt_offset)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcalculate_longitude\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolarnoon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgmt_offset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0msn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m60\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msolarnoon\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# convert hours to minutes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0meot_days\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meot\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mestimates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalc_lon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meot_days\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgmt_offset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
-     ]
-    }
-   ],
-   "source": [
-    "calculate_longitude(eot_duffie, solarnoon, days, gmt_offset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "studied-edgar",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-62de2128e241>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
-   "source": [
-    "bool(days)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "useful-julian",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True, ...,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "days == 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "gentle-pointer",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid number of arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-f86a4c821ca3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogical_and\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: invalid number of arguments"
-     ]
-    }
-   ],
-   "source": [
-    "np.logical_and(days)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "military-broadway",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "days = days.astype(dtype=bool)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "distant-christianity",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True, ...,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "modified-danish",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
