--- a/tests/fixtures/longitude_fitting/longitude_fitting_test_data_creator.ipynb
+++ b/tests/fixtures/longitude_fitting/longitude_fitting_test_data_creator.ipynb
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 22.5 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 50.0 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -111,17 +111,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 6.99 seconds\n",
+      "total time: 16.44 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              2.54s\n",
-      "Cleaning                   0.15s\n",
-      "Filtering/Summarizing      4.29s\n",
-      "    Data quality           0.19s\n",
-      "    Clear day detect       0.14s\n",
-      "    Clipping detect        3.35s\n",
-      "    Capacity change detect 0.61s\n",
+      "Preprocessing              5.60s\n",
+      "Cleaning                   0.31s\n",
+      "Filtering/Summarizing      10.52s\n",
+      "    Data quality           0.46s\n",
+      "    Clear day detect       0.32s\n",
+      "    Clipping detect        8.37s\n",
+      "    Capacity change detect 1.37s\n",
       "\n"
      ]
     }
@@ -145,32 +145,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pvsystemprofiler.algorithms.optimized_sunrise_sunset import get_optimized_sunrise_sunset"
+    "from solardatatools.algorithms import SunriseSunset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "25e4b3ec",
+   "execution_count": 16,
+   "id": "irish-steel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fdm = dh.filled_data_matrix\n",
-    "rdm = None\n",
-    "day_of_year = dh.day_index.dayofyear.to_numpy()\n",
-    "days = dh.daily_flags.no_errors\n",
-    "opt_dict = get_optimized_sunrise_sunset(fdm, rdm)"
+    "ss = SunriseSunset()\n",
+    "ss.run_optimizer(data=dh.filled_data_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "62b4ffd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sunrise = opt_dict['meas_sr_f']\n",
-    "sunset = opt_dict['meas_ss_f']\n",
+    "sunrise = ss.sunrise_measurements\n",
+    "sunset = ss.sunset_measurements\n",
     "sunrise[np.isnan(sunrise)] = 0\n",
     "sunset[np.isnan(sunset)] = 0\n",
     "solarnoon = np.nanmean([sunrise, sunset], axis=0)"
@@ -186,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "bda468f5",
    "metadata": {},
    "outputs": [],
@@ -197,7 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
+   "id": "effective-cooperative",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_of_year = dh.day_index.dayofyear.to_numpy()\n",
+    "days = dh.daily_flags.no_errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "910e031c",
    "metadata": {},
    "outputs": [],
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "1d3cb149",
    "metadata": {},
    "outputs": [],
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "9a563f22",
    "metadata": {},
    "outputs": [],
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "1edd7410",
    "metadata": {},
    "outputs": [],
@@ -255,17 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "01faad28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-77.22534574490635"
+       "-77.23547443890078"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
