combined fixtures for longitude-fitting and longitude calc + paths fixed

--- a/tests/fixtures/longitude/longitude_fitting_and_calculation_test_data_creator.ipynb
+++ b/tests/fixtures/longitude/longitude_fitting_and_calculation_test_data_creator.ipynb
@@ -5,7 +5,7 @@
    "id": "71df060f",
    "metadata": {},
    "source": [
-    "## Generating fixtures to test the Equation Of Time functions being used and the Longitude Calculation Functions"
+    "## Generating fixtures to test the Equation Of Time functions, the Longitude Fitting Functions and the Longitude Calculation Functions"
    ]
   },
   {
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 48.7 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 24.0 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -109,17 +109,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 16.59 seconds\n",
+      "total time: 7.11 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              5.58s\n",
-      "Cleaning                   0.31s\n",
-      "Filtering/Summarizing      10.70s\n",
-      "    Data quality           0.45s\n",
-      "    Clear day detect       0.33s\n",
-      "    Clipping detect        8.48s\n",
-      "    Capacity change detect 1.43s\n",
+      "Preprocessing              2.57s\n",
+      "Cleaning                   0.14s\n",
+      "Filtering/Summarizing      4.40s\n",
+      "    Data quality           0.20s\n",
+      "    Clear day detect       0.14s\n",
+      "    Clipping detect        3.45s\n",
+      "    Capacity change detect 0.62s\n",
       "\n"
      ]
     }
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "written-drove",
+   "id": "irish-steel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,28 +184,16 @@
    "execution_count": 9,
    "id": "bda468f5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/londonoh/Documents/github/pv-system-profiler')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = Path.cwd()\n",
-    "os.chdir(path)\n",
-    "path"
+    "os.chdir(path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "minor-gabriel",
+   "id": "effective-cooperative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +209,7 @@
    "outputs": [],
    "source": [
     "# Exporting input for eot algorithms\n",
-    "np.savetxt('./tests/fixtures/longitude_calculation/eot_input.csv', day_of_year,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/longitude/eot_input.csv', day_of_year,  delimiter=\",\")"
    ]
   },
   {
@@ -245,16 +233,8 @@
    "outputs": [],
    "source": [
     "# Exporting output for eot algorithms\n",
-    "np.savetxt('./tests/fixtures/longitude_calculation/eot_duffie_output.csv', eot_duffie,  delimiter=\",\")\n",
-    "np.savetxt('./tests/fixtures/longitude_calculation/eot_da_rosa_output.csv', eot_da_rosa,  delimiter=\",\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "606d2f6a",
-   "metadata": {},
-   "source": [
-    "### Fit longitude"
+    "np.savetxt('./tests/fixtures/longitude/eot_duffie_output.csv', eot_duffie,  delimiter=\",\")\n",
+    "np.savetxt('./tests/fixtures/longitude/eot_da_rosa_output.csv', eot_da_rosa,  delimiter=\",\")"
    ]
   },
   {
@@ -264,11 +244,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exporting inputs for fit_longitude\n",
+    "# exporting inputs for fit_longitude and calculate_longitude\n",
     "# solarnoon\n",
-    "np.savetxt('./tests/fixtures/longitude_calculation/solarnoon.csv', solarnoon,  delimiter=\",\")\n",
+    "np.savetxt('./tests/fixtures/longitude/solarnoon.csv', solarnoon,  delimiter=\",\")\n",
     "# days\n",
-    "np.savetxt('./tests/fixtures/longitude_calculation/days.csv', days,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/longitude/days.csv', days,  delimiter=\",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d9faff8",
+   "metadata": {},
+   "source": [
+    "### Fit longitude"
    ]
   },
   {
@@ -280,10 +268,41 @@
     {
      "data": {
       "text/plain": [
-       "-77.10636729272031"
+       "-77.22653735596457"
       ]
      },
      "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pvsystemprofiler.algorithms.longitude.fitting import fit_longitude\n",
+    "\n",
+    "fit_longitude(eot_duffie, solarnoon, days, gmt_offset, loss='l2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a29af015",
+   "metadata": {},
+   "source": [
+    "### Calculate Longitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4a2955a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-77.11468749014837"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
