.astype(dtype=bool) added to days in notebook

--- a/tests/fixtures/longitude/longitude_fitting_and_calculation_test_data_creator.ipynb
+++ b/tests/fixtures/longitude/longitude_fitting_and_calculation_test_data_creator.ipynb
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 24.0 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 25.0 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -113,13 +113,13 @@
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              2.57s\n",
-      "Cleaning                   0.14s\n",
-      "Filtering/Summarizing      4.40s\n",
-      "    Data quality           0.20s\n",
+      "Preprocessing              2.52s\n",
+      "Cleaning                   0.15s\n",
+      "Filtering/Summarizing      4.45s\n",
+      "    Data quality           0.19s\n",
       "    Clear day detect       0.14s\n",
-      "    Clipping detect        3.45s\n",
-      "    Capacity change detect 0.62s\n",
+      "    Clipping detect        3.49s\n",
+      "    Capacity change detect 0.63s\n",
       "\n"
      ]
     }
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "day_of_year = dh.day_index.dayofyear.to_numpy()\n",
-    "days = dh.daily_flags.no_errors"
+    "days = dh.daily_flags.no_errors.astype(dtype=bool)"
    ]
   },
   {
@@ -268,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "-77.22653735596457"
+       "-77.22534574490635"
       ]
      },
      "execution_count": 15,
@@ -299,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "-77.11468749014837"
+       "-77.10636729272031"
       ]
      },
      "execution_count": 16,
