fixed failing test

--- a/tests/fixtures/longitude/longitude_fitting_and_calculation_test_data_creator.ipynb
+++ b/tests/fixtures/longitude/longitude_fitting_and_calculation_test_data_creator.ipynb
@@ -192,18 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "effective-cooperative",
    "metadata": {},
    "outputs": [],
    "source": [
     "day_of_year = dh.day_index.dayofyear.to_numpy()\n",
-    "days = dh.daily_flags.no_errors.astype(dtype=bool)"
+    "days = dh.daily_flags.no_errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "910e031c",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "1d3cb149",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "9a563f22",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "1edd7410",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "01faad28",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "-77.22534574490635"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "4a2955a6",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "-77.10636729272031"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
